egonlang-core/res/examples/invalid/prefix_expr_negate_bool_with_identifier.eg
let a = false;

-a;

// out: TypeError: mismatched types: expected type `number` but received `bool`